[package]
name = "fivedcserver"
version = "1.0.1"
authors = ["NKID00 <NKID00@pm.me>"]
license = "AGPL-3.0-only"
edition = "2021"
build = "src/build.rs"

[dependencies]
tokio = { version = "^1.25.0", features = ["rt-multi-thread", "net", "fs", "sync", "time", "macros"] }
tokio-util = { version = "^0.7.7", features = ["codec"] }
futures = "^0.3.26"
bytes = "^1.4.0"
enum_primitive = "^0.1.1"
num = "^0.4.0"
tracing = "^0.1.37"
tracing-subscriber = "^0.3.16"
byteorder = "^1.4.3"
rand = "^0.8.5"
indexmap = "^1.9.2"
ctrlc = "^3.2.5"
toml = "^0.7.2"
indoc = "^2.0.0"
anyhow = "^1.0.69"

[build-dependencies]
vergen = "^7.5.1"

[[bin]]
name = "5dcserver"
path = "src/main.rs"
