[package]
name = "fivedcserver"
version = "1.0.1"
authors = ["NKID00 <NKID00@pm.me>"]
license = "AGPL-3.0-only"
edition = "2021"

[[bin]]
name = "5dcserver"
path = "src/main.rs"

[dependencies]
tokio = { version = "^1.19.2", features = ["rt-multi-thread", "net", "fs", "sync", "time", "macros"] }
tokio-util = { version = "^0.7.3", features = ["codec"] }
futures = "^0.3.21"
bytes = "^1.1.0"
enum_primitive = "^0.1.1"
num = "^0.4.0"
tracing = "^0.1.35"
tracing-subscriber = { version = "^0.3.11", features = ["local-time"] }
byteorder = "^1.4.3"
rand = "^0.8.5"
indexmap = "^2.0.0"
ctrlc = { version = "^3.4.0", features = ["termination"] }
toml = "^0.7.6"

[profile.release]
lto = true
strip = true
